# moria_ws

./: README.md  TODOs.todo  check.md  moria_todos.md
moria/: README.md
moria/moria_bringup/: package.xml
moria/moria_bringup/launch/: robot.launch.py
moria/moria_description/: package.xml
moria/moria_description/meshes/: camera.STL  fuzzy_wheel.STL
moria/moria_description/rviz/: model.rviz
moria/moria_description/urdf/: camera.xacro  moria.urdf.xacro
moria/moria_gazebo/launch/: empty_world.launch.py  gazebo.launch.py  spawn_moria.launch.py
moria/moria_gazebo/model/: moria.urdf
moria/moria_gazebo/model/meshes/: base_link.STL  base_link.dae
moria/moria_gazebo/urdf/: sensors.xacro
moria/moria_gazebo/worlds/: empty_world.world
moria_bringup/: CMakeLists.txt  README.md  package.xml
moria_bringup/launch/: rviz2.launch.py  state_publisher.launch.py
moria_cartographer/: CMakeLists.txt  README.md  package.xml
moria_cartographer/config/: moria_slam.yaml
moria_cartographer/launch/: moria_cartograph.launch.py  moria_vslam.launch.py  moria_vslam_scan.launch.py  vslam.launch.py  wall_track.py
moria_cartographer/run/: align_wall.py  frontier_exploration.py  fuzzy_obstacle_avoidance.py  map_clear.py  map_clear2.py  map_clear3.py  trim.py  wall_track.py  wall_track_fz.py
moria_cartographer/rviz/: moria_slam.rviz
moria_description/: CMakeLists.txt  README.md  package.xml
moria_description/meshes/: body.STL  camera.STL  front_base.STL  front_wheel.STL  left_00.STL  left_02.STL  left_11.STL  left_12.STL  left_20.STL  left_21.STL  left_30.STL  left_31.STL  left_32.STL  left_41.STL  left_42.STL  left_motor.STL  left_wheel.STL  lidar.STL  neck.STL  right_00.STL  right_01.STL  right_02.STL  right_11.STL  right_12.STL  right_21.STL  right_30.STL  right_31.STL  right_32.STL  right_40.STL  right_41.STL  right_motor.STL  right_shoulder.STL  right_shoulder_rad.STL  right_upper_arm.STL  right_wheel.STL
moria_description/rviz/: model.rviz
moria_description/urdf/: camera.xacro  check.urdf  fixed_left_arm.xacro  fixed_right_arm.xacro  left_arm.xacro  moria.urdf.xacro  moria_fixed.urdf.xacro  right_arm.xacro  sensors.xacro
moria_gazebo/: CMakeLists.txt  README.md  joint_names.txt  package.xml
moria_gazebo/config/: my_controllers.yaml  robot_controller.yaml
moria_gazebo/launch/: D_gazebo.launch.py  D_launch_sim.launch.py  btu.launch.py  btu_big.launch.py  empty_world.launch.py  joystick.launch.py  robot_state_publisher.launch.py  spawn_moria.launch.py  state_publisher.launch.py
moria_gazebo/model/: model.config  moria.sdf  moria.urdf  one_moria.urdf
moria_gazebo/model/meshes/: one_piece_base.STL
moria_gazebo/models/btu_real/: model.config  model.sdf
moria_gazebo/models/btu_real/meshes/: btu_big.dae  btu_big.stl  btu_big_1.stl
moria_gazebo/models/btu_real_2/: model.config  model.sdf
moria_gazebo/models/meshes/: camera.STL  front_wheel.STL  left_22.STL  left_40.STL  left_shoulder_rad.STL  right_00.STL  right_20.STL
moria_gazebo/models/moria/: model.config  model.sdf  model.urdf
moria_gazebo/models/moria/meshes/: base_link.STL  body.STL  front_base.STL  front_rad.STL  left_00.STL  left_01.STL  left_02.STL  left_10.STL  left_12.STL  left_22.STL  left_31.STL  left_32.STL  left_40.STL  left_41.STL  left_elbow.STL  left_lower_arm.STL  left_motor.STL  left_shoulder.STL  left_shoulder_rad.STL  left_upper_arm.STL  left_wheel.STL  leg.STL  lidar.STL  neck.STL  right_01.STL  right_02.STL  right_10.STL  right_11.STL  right_12.STL  right_20.STL  right_22.STL  right_30.STL  right_31.STL  right_32.STL  right_41.STL  right_42.STL  right_elbow.STL  right_motor.STL  right_shoulder.STL  right_upper_arm.STL  (+1 more)
moria_gazebo/rviz/: model.rviz
moria_gazebo/urdf/: moria.urdf
moria_gazebo/worlds/: btu_real.world
moria_ws/install/: local_setup.sh  setup.sh
moria_ws/install/moria_bringup/share/moria_bringup/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
moria_ws/install/moria_description/share/moria_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
moria_ws/install/moria_gazebo/include/moria_gazebo/: moria_drive.hpp
moria_ws/install/moria_gazebo/lib/moria_gazebo/: moria_drive
moria_ws/install/moria_gazebo/share/moria_gazebo/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
moria_ws/log/: latest_build
moria_ws/src/moria/moria_description/: CMakeLists.txt
moria_ws/src/moria/moria_gazebo/: CMakeLists.txt  package.xml
(+74 files in other folders)
