<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
<name>moria_bringup</name>
  <version>2.0.0</version>
  <description>
	ROS 2 launch scripts for starting the Moria
  </description>
  <maintainer email="kemaltml@outlook.com">Kemal Temel</maintainer>
  <license>Apache 2.0</license>
  <url type="repository">https://github.com/kemaltml/moria_ws</url>
  <author email="kemaltml@outlook.com">Kemal Temel</author>
  <author email="onrsevdi@gmail.com">Onur Sevdi</author>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>hls_lfcd_lds_driver</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>moria_description</exec_depend>
  <exec_depend>moria_node</exec_depend>
  <export>
	<build_type>ament_cmake</build_type>
  </export>
</package>
