<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>moria_description</name>
    <version>3.1.0</version>
    <description>
        3D model of the Moria for Simulation and visualization
    </description>
    <maintainer email="kemaltml@outlook.com">Kemal Temel</maintainer>
    <license>Apache 2.0</license>
    <url type="repository">https://github.com/kemaltml/moria_ws</url>
    <author email="kemaltml@outlook.com">Kemal Temel</author>
    <author email="onrsevdi@gmail.com">Onur Sevdi</author>
    <buildtool_depend>ament_cmake</buildtool_depend>
    <depend>urdf</depend>
    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
